--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="styles/base.css">
 	</head>
 	<body>
-		<h1>Landingsplekken op aarde</h1>
+		<div>
+			<h3>Weersomstandigheden thuisbasis</h3>
+			<input type="button" id="getWeather" value="Wat voor weer is het in Florida?">
+			<article id="weather"></article>
+		</div>
+		<h1>Kaart</h1>
+		<div id="route">
+			<input type=button id="berekenRoute" value="Bereken route naar Kennedy Space Center">
+			<input type=button id="verbergRoute" value="Verberg route naar Kennedy Space Center">
+		</div>
 		<div id="map"></div>
 		<script src="scripts/main.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPxxwAjegJKRNfda2D8Gvt66CB5rbANL4&callback=initMap"
