--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div>
 			<h3>Weersomstandigheden thuisbasis</h3>
-			<input type="button" id="getWeather" value="Wat voor weer is het in Florida?">
+			<button id="getWeather">Wat voor weer is het in Florida?</button>
 			<article id="weather"></article>
 		</div>
 		<h1>Kaart</h1>
