--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		</div>
 		<h1>Kaart</h1>
 		<div id="route">
-			<input type=button id="berekenRoute" value="Bereken route naar Kennedy Space Center">
-			<input type=button id="verbergRoute" value="Verberg route naar Kennedy Space Center">
+			<button id="berekenRoute">Bereken route naar Kennedy Space Center</button>
+			<button id="verbergRoute">Verberg route naar Kennedy Space Center</div>
 		</div>
 		<div id="map"></div>
 		<script src="scripts/main.js"></script>
