--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/base.css">
 	</head>
 	<body>
+		<img src="styles/images/spacex-logo2.png">
 		<div>
 			<h3>Weersomstandigheden thuisbasis</h3>
 			<button id="getWeather">Wat voor weer is het in Florida?</button>
