--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
 		<link rel="stylesheet" type="text/css" href="styles/base.css">
 	</head>
 	<body>
-		<img src="styles/images/spacex-logo2.png">
-		<div>
-			<h3>Weersomstandigheden thuisbasis</h3>
-			<button id="getWeather">Wat voor weer is het in Florida?</button>
-			<article id="weather"></article>
+		<div class="grid">
+			<img src="styles/images/spacex-logo2.png">
+			<div id="weer">
+				<h3>Weersomstandigheden thuisbasis</h3>
+				<div id="weerFlorida">
+					<button id="getWeather">Wat voor weer is het in Florida?</button>
+					<article id="weather"></article>
+				</div>
+			</div>
+			<h1>Kaart</h1>
+			<div id="route">
+				<button id="berekenRoute">Bereken route naar Kennedy Space Center</button>
+				<button id="verbergRoute">Verberg route naar Kennedy Space Center</button>
+			</div>
+			<div id="map"></div>
 		</div>
-		<h1>Kaart</h1>
-		<div id="route">
-			<button id="berekenRoute">Bereken route naar Kennedy Space Center</button>
-			<button id="verbergRoute">Verberg route naar Kennedy Space Center</div>
-		</div>
-		<div id="map"></div>
 		<script src="scripts/main.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPxxwAjegJKRNfda2D8Gvt66CB5rbANL4&callback=initMap"
     async defer></script>
