--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 			<img src="styles/images/spacex-logo2.png">
 			<div id="weer">
 				<h3>Weersomstandigheden thuisbasis</h3>
-				<div id="weerFlorida">
-					<button id="getWeather">Wat voor weer is het in Florida?</button>
-					<article id="weather"></article>
-				</div>
+				<button id="getWeather">Wat is het huidige weer in Florida?</button>	
+				<article id="weather"></article>
 			</div>
 			<h1>Kaart</h1>
 			<div id="route">
 				<button id="berekenRoute">Bereken route naar Kennedy Space Center</button>
-				<button id="verbergRoute">Verberg route naar Kennedy Space Center</button>
+				<button id="routeVerbergen">Verberg route naar Kennedy Space Center</button>
 			</div>
 			<div id="map"></div>
 		</div>
