--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1>Kaart</h1>
 			<div id="route">
 				<button id="berekenRoute">Bereken route naar Kennedy Space Center</button>
-				<button id="routeVerbergen">Verberg route naar Kennedy Space Center</button>
+				<button id="verbergRoute">Verberg route naar Kennedy Space Center</button>
 			</div>
 			<div id="map"></div>
 		</div>
