--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 			<img src="styles/images/spacex-logo2.png">
 			<div id="weer">
 				<h3>Weersomstandigheden thuisbasis</h3>
-				<button id="getWeather">Wat is het huidige weer in Florida?</button>	
+				<button id="getWeather">Hoe is het huidige weer in Florida?</button>	
 				<article id="weather"></article>
 			</div>
 			<h1>Kaart</h1>
 			<div id="route">
-				<button id="berekenRoute">Bereken route naar Kennedy Space Center</button>
-				<button id="verbergRoute">Verberg route naar Kennedy Space Center</button>
+				<button id="berekenRoute">Bereken de route van de landingsplek naar Kennedy Space Center</button>
+				<button id="verbergRoute">Verberg de route van de landingsplek naar Kennedy Space Center</button>
 			</div>
 			<div id="map"></div>
 		</div>
