--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 	<head>
 		<meta charset="utf-8">
 		<title>Google maps</title>
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="grid">
-			<img src="styles/images/spacex-logo2.png">
+			<img src="styles/images/spacex-logo2.png" alt="logo spacex">
 			<div id="weer">
 				<h3>Weersomstandigheden thuisbasis</h3>
 				<button id="getWeather">Hoe is het huidige weer in Florida?</button>	
