--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="nl">
 	<head>
 		<meta charset="utf-8">
-		<title>Google maps</title>
+		<title>Challenge 3 - Maartje Pont</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="styles/base.css">
 	</head>
 	<body>
